# Mirzakhani-Recursion

./: .gitignore  README.md  pyproject.toml  sandbox.ipynb
notebooks/: Examples.ipynb  Intersection_Numbers_Tutorial.ipynb
scripts/: run_iterate.py
src/: __init__.py  bernoulli.py  compute.py  dependency.py  genus0.py  logging_config.py  normalization.py  partitions.py  recursion.py  store.py  types.py  utils.py
tests/: test_genus0.py  test_layout_and_compute.py  test_normalization.py
