[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wp"
version = "0.1.0"
description = "Weil–Petersson intersection numbers via recursion"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
genus0 = ["sympy>=1.12"]

[tool.setuptools]
packages = ["wp"]

[tool.setuptools.package-dir]
wp = "src"
